# rtsynth

./: .gitmodules  CMakeLists.txt  README.md  gen.cpp  gen.hpp  rcv.cpp
src/: main.cpp
src/core/: AudioBuffer.hpp  MidiBuffer.hpp  Parameters.hpp  Processor.hpp  SpscRingBuffer.hpp
src/dsp/: AdsrEnvelope.hpp  SineOscillator.hpp  SmoothedValue.hpp
src/host/: ControlInput.hpp  ControlLoop.hpp  GpioEncoderInput.cpp  GpioEncoderInput.hpp  Mcp3008Input.cpp  Mcp3008Input.hpp  ParameterWatcher.hpp  RtAudioOutput.cpp  RtAudioOutput.hpp  RtMidiInput.cpp  RtMidiInput.hpp  StandaloneHost.cpp  StandaloneHost.hpp
src/synth/: PdSynthProcessor.cpp  PdSynthProcessor.hpp  SineSynthProcessor.cpp  SineSynthProcessor.hpp  Voice.hpp  VoiceAllocator.hpp
src/vst3shim/pluginterfaces/vst/: vsttypes.h
tests/: selftest.cpp
